--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ var htmlCode = `
 <head>
 <title>AngularJS Todo List</title>
 <script
-src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js">&lt/script>
+src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js">&lt;/script>
 </head>
 <body ng-controller="todoController">
 <h1>Todo List</h1>
@@ -100,7 +100,7 @@ $scope.deleteTask = function (index) {
 $scope.tasks.splice(index, 1);
 };
 });
-&lt/script>
+&lt;/script>
 </body>
 </html>
 `
